[package]
name = "fl2rust"
version = "0.4.12"
authors = ["Mohammed Alyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "A fluid (fltk ui designer) file to Rust transpiler"
repository = "https://github.com/fltk-rs/fl2rust"
documentation = "https://docs.rs/fl2rust"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[lib]
name = "fl2rust"
path = "src/lib.rs"

# used in the examples
[dev-dependencies]
fltk = "1"
fltk-form = "0.1"
fltk-form-derive = "0.1"
