[package]
name = "fl2rust-macro"
version = "0.5.10"
authors = ["Mohammed Alyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "A fluid (fltk ui designer) file to Rust transpiler"
repository = "https://github.com/fltk-rs/fl2rust"
documentation = "https://docs.rs/fl2rust"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
rust-version = "1.63"

[lib]
proc-macro = true

[dependencies]
fl2rust = { path = "../fl2rust", version = "0.5.10" }
fluid-parser = "0.1.11"
