[package]
name = "fl2rust"
version = "0.5.17"
authors = ["Mohammed Alyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2021"
description = "A fluid (fltk ui designer) file to Rust transpiler"
repository = "https://github.com/fltk-rs/fl2rust"
documentation = "https://docs.rs/fl2rust"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
rust-version = "1.63"

[lib]
name = "fl2rust"
path = "src/lib.rs"

[dependencies]
fluid-parser = "0.1.14"

